@@ -1,3 +1,6 @@
+14-November-2011 Michael Babker
+- Remove Google Buzz button due to API shutdown
+
 18-October-2011 Michael Babker
 ~ Add a min-width to button elements
 
